# FRE-NCtools

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .perltidyrc  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FRE-nctools_documentation_github.txt  Makefile  Makefile.am  README.md  build.sh  configure.ac  environment.yml  fre-nctools-make-package  fre-nctools-make-package.orig  fre-nctools-make-package.sh  meta.yaml  split_ncvars.csh  split_ncvars.pl
cpp/: CMakeLists.txt  CMakePresets.json  README_BUILD.txt  gcc_toolchain  nvhpc_toolchain
cpp/dependencies/: CMakeLists.txt
cpp/fregrid/: CMakeLists.txt  bilinear_interp.C  conserve_interp.C  conserve_interp.c  fregrid.C  fregrid_util.C  globals.h  searchtest.C
cpp/include/: README  cartesian_product.hpp  format
cpp/libfrencutils/: CMakeLists.txt  affinity.C  constant.h  create_xgrid.C  create_xgrid.h  create_xgrid_aux.h  create_xgrid_gpu.C  gradient_c2l.C  gradient_c2l.h  interp.C  mosaic_util.C  mosaic_util.c  mosaic_util.h  mpp.C  mpp.h  mpp_domain.C  mpp_domain.h  mpp_io.C  mpp_io.h  read_mosaic.C  read_mosaic.h  tool_util.C  tool_util.c  tool_util.h
cpp/scripts/: cflags_clang_sycl_cuda.sh  cflags_nvcpp.sh  load_clang_sycl_cuda.sh
cpp/search/: BBox3D.cpp  BBox3D.h  BoxedObj.h  BruteBoxQuery.h  CMakeLists.txt  Comparators.h  DITree.h  DITreeNode.h  DistanceInterval.h  Partition.h  Point3D.h  Polygon.h  TreePerfStats.h
cpp/sycl_tests/: CMakeLists.txt  sycltest.C  synchro.C
cpp/test/: CMakeLists.txt  bbox_tests.C
lib/: Makefile.am
lib/libfrencutils/: constant.h  create_xgrid.c  create_xgrid.h  interp.c  local.mk  mosaic_util.c  mpp.h  mpp_domain.c  mpp_io.h
lib/libfrencutils_gpu/: create_xgrid_gpu.c  create_xgrid_utils_gpu.c  local.mk  parameters.h
lib/libnfu/: Makefile.am  local.mk
man/: Makefile.am  check_mask.txt  combine-ncc.txt  combine_restarts.txt  decompress-ncc.txt  fregrid.txt  iceberg_comb.sh.txt  is-compressed.txt  list_ncvars.csh.1  list_ncvars.csh.txt  list_ncvars.sh.txt  list_ncvars.txt  make_coupler_mosaic.txt  make_coupler_mosaic_parallel.1  make_hgrid.txt  make_land_domain.txt  make_quick_mosaic.txt  make_regional_mosaic.txt  make_remap_file.txt  make_solo_mosaic.txt  make_topog.txt  make_topog_parallel.1  make_vgrid.txt  mppnccombine.txt  mppncscatter.txt  ncexists.txt  plevel.sh.txt  plevel_interp.txt  remap_land.txt  river_regrid.txt  scatter-ncc.txt  split_ncvars.pl.1  split_ncvars.pl.txt  timavg.csh.1  timavg.txt  time_average.txt  transfer_to_mosaic_grid.txt
postprocessing/combine_restarts/: Makefile  Makefile.am  asciidoc.conf  combine_restarts  combine_restarts.txt  combine_restarts.xml
postprocessing/iceberg_comb/: Makefile  Makefile.am  iceberg_comb.sh  iceberg_comb.sh.in  iceberg_comb.sh.txt  iceberg_comb.xml
postprocessing/land_utils/: CHANGELOG  Makefile  Makefile.am  combine-lumip-vars.py  combine-ncc  combine-ncc.F90  decompress-ncc  decompress-ncc.F90  env.gaea  fre-nctools.mk  is-compressed.c  nfu.F90  nfu_compress.F90  scatter-ncc.F90
postprocessing/list_ncvars/: Makefile  Makefile.am  fre-nctools.mk  list_ncvars.csh  list_ncvars.f90
postprocessing/plevel/: Makefile  Makefile.am  env.gaea  fre-nctools.mk  moisture_convert.F90  pinterp_utilities.F90  plev_constants.F90  plevel.sh  pressure_interp.F90  run_pressure_interp.F90
postprocessing/timavg/: Makefile  Makefile.am  fre-nctools.mk  timavg.csh  time_average.f90
src/: Makefile.am  nct_nc_utils.F90  print_version.c  version.c
src/check-mask/: check_mask.c
src/combine-restarts/: combine_restarts.in
src/combine_restarts/: combine_restarts.in
src/cubic_utils/: make_remap_file.c
src/fre-grid/: conserve_interp.c  conserve_interp.h  fregrid.c  fregrid_util.c
src/fregrid-gpu/: conserve_interp_gpu.h  fregrid_utils_gpu.c  interp_utils_gpu.h
src/iceberg-comb/: iceberg_comb.sh.in
src/iceberg_comb/: Makefile.am  iceberg_comb.sh.in
src/land_utils/: CHANGELOG  combine-ncc.F90  decompress-ncc.F90  is-compressed.c  scatter-ncc.F90
src/list-ncvars/: CHANGELOG  list_ncvars.csh  list_ncvars.csh.in  list_ncvars.f90  list_ncvars.sh.in
src/make-coupler-mosaic/: make_coupler_mosaic.c
src/make-hgrid/: Makefile.am  create_gnomonic_cubic_grid.c  create_hgrid.h  create_lonlat_grid.c  make_hgrid.c
src/make-land-domain/: make_land_domain.c
src/make-regional-mosaic/: make_regional_mosaic.c
src/make-solo-mosaic/: get_contact.h
src/make-topog/: CHANGELOG  topog.c  topog.h
src/make-vgrid/: create_vgrid.c  make_vgrid.c
src/mpp-nccombine/: CHANGELOG  mppnccombine.c
src/mpp-ncscatter/: mppncscatter.h  strlist.h
src/nc-exists/: ncexists.c
src/plevel/: CHANGELOG  (+5 more)
t/: 01-make_hgrid.sh  01-make_vgrid.sh  01-mppnccombine.sh  01-ncgenerator.py  Makefile  Makefile.am  Makefile.in  Test-fregrid_scaling.sh  Test-fregrid_scaling.sh.in  Test01-check_programs_exist.sh  Test01-check_programs_exist.sh.trs  Test02-mppnccombine.sh  Test03-grid_coupled_model.sh  Test04-grid_coupled_nest.sh  Test05-remap_c48_regular.sh  Test06-regrid_extrap.sh  Test07-runoff_regrid.sh  Test08-check_mask.sh  Test09-check_mask_MOM.sh  Test09-check_mask_MOM.sh.trs  Test10-remap_land_res.sh  Test11-make_regional_mosaic.sh  Test12-mppnscatter.sh  Test13-make_quick_mosaic.sh  Test14-remap_ocean.sh  Test15-regrid_land.sh  Test16-river_regrid.sh  Test17-combine-ncc.sh  Test18-decompress-ncc.sh  Test20-fregrid.sh  Test21-reference_mppnccombine.sh  Test22-reference_combine-ncc.sh  Test23-reference_decompress-ncc.sh  Test24-reference_fregrid.sh  Test25-hydrology.sh  Test25-input  Test26-reference_fregrid_gcc.sh  Test27-multiple_nests.sh  Test28-fregrid_stretched.sh  Test28-make_hgrid.sh  (+38 more)
t_gpu/: Makefile.am
tests/: 5degree_topog.nc  Makefile.am  create_5degree_topog.c  create_daily_tile_files.c  create_hydro_glcc_file.c  create_land_remap_files.c  create_mask_topog.c  create_occam_topog.c  create_ocean_mask_grid.c  create_plevel_test_ncfile.c  create_regional_file.c  create_river_regrid_file.c  create_runoff_file.c  create_salt_temp_file.c  create_temp_salt_file.c  create_timeavg_test_ncfiles.c  init.cfg  init.sh  nc_cmp
(+788 files in other folders)
